force-app/main/default/objects/Key_Result__c/fields/Completed_Targets__c.field-meta.xml
<CustomField>
    <fullName>Completed_Targets__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field &quot;Completed Targets&quot; for &quot;Key Result&quot; object to keep track of completed targets. For example 0/50, 5/50 etc.</description>
    <label>Completed Targets</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>