force-app/main/default/objects/Key_Result__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>Field &quot;Target&quot; for &quot;Key Result&quot; obejct to display, how many targets need to be completed</description>
    <label>Target</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>